# hyperflow-risk-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  dashboard.html  main.py  schemas.py
data/: replay_examples.jsonl  sample_signals.json  sample_trades.csv
demo/: demo_script.md  example_requests.http
demo/screenshots/: .gitkeep
docs/: API.md  ARCHITECTURE.md  RISK_LOGIC.md  ROADMAP.md  demo-checklist.md  demo-script.md  deployment.md  future-ml-roadmap.md  invariants.md  judging-positioning.md  pitch-deck-outline.md  submission.md
models/: .gitkeep  README.md
risk_agent/: __init__.py  constants.py  engine.py  explainability.py  features.py  replay.py  rules.py  scorer.py
scripts/: generate_sample_data.py  replay_demo.py  run_api.py  train_baseline_model.py
tests/: test_api.py  test_engine.py  test_execution_identity_idempotency.py  test_execution_invariants.py  test_execution_state_consistency.py  test_explainability.py  test_features.py  test_gate_correctness.py  test_rules.py
