[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperflow-risk-agent"
version = "0.1.0"
description = "Public-safe hackathon demo of a trade risk intelligence layer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "HyperFlow Risk Agent Contributors" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "scikit-learn>=1.5,<2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "risk_agent*"]